Ändringar av cards-hemsidan
Jag har lagt till hover och hero-img. Jag har centrerat "Our Products" och gjort cards-rutorna större.

--- a/html/cards.html
+++ b/html/cards.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8"> 
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EcoHarmony - Products</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
-<body> 
+<body>
     <header>
         <nav>
             <ul class="nav">
@@ -24,22 +24,42 @@
             <div class="card card1">
                 <h2>Reusable Water Bottle</h2>
                 <p>Stay hydrated while saving the planet.</p>
+                <div class="card-text">
+                    <p>Our reusable water bottles are designed to reduce plastic waste and keep your drinks cool or hot
+                        for hours. Made with durable materials!</p>
+                </div>
             </div>
             <div class="card card2">
                 <h2>Organic Tote Bag</h2>
                 <p>Carry your essentials the eco-friendly way.</p>
+                <div class="card-text">
+                    <p>Our organic cotton tote bags are strong, reusable, and perfect for grocery shopping, carrying
+                        books, or just everyday use. Made with sustainable practices.</p>
+                </div>
             </div>
             <div class="card card3">
                 <h2>Biodegradable Packaging</h2>
                 <p>Reduce waste with our sustainable options.</p>
+                <div class="card-text">
+                    <p>Say goodbye to plastic! Our biodegradable packaging is eco-friendly, compostable, and perfect for
+                        reducing waste in your daily life.</p>
+                </div>
             </div>
             <div class="card card4">
                 <h2>Sustainable Coffee Cups</h2>
                 <p>Enjoy your coffee guilt-free.</p>
+                <div class="card-text">
+                    <p>Our reusable coffee cups are made from sustainable materials, ensuring your morning coffee is
+                        both eco-friendly and convenient to carry around.</p>
+                </div>
             </div>
             <div class="card card5">
                 <h2>Compostable Cutlery</h2>
                 <p>Eco-friendly utensils for every meal.</p>
+                <div class="card-text">
+                    <p>Our compostable cutlery is perfect for meals on the go. Made from plant-based materials, they
+                        break down naturally and don't harm the environment.</p>
+                </div>
             </div>
         </section>
     </main>
