Ändringar av about us hemsidan
Jag gjorde om denna hemsidan helt. Lade till en Hero-img och en section om "Our Mission" och sedan kontakter längst ned.

--- a/html/grid.html
+++ b/html/grid.html
@@ -19,22 +19,28 @@
         </nav>
     </header>
     <main class="about-page">
-        <h1>About Us</h1>
-        <section class="about-grid">
-            <div class="about-item">
-                <h2>Our Mission</h2>
-                <p>To promote sustainable living.</p>
-            </div>
-            <div class="about-item">
-                <h2>Our Vision</h2>
-                <p>A greener, cleaner planet.</p>
-            </div>
-            <div class="about-item">
-                <h2>Our Team</h2>
-                <p>Dedicated and passionate individuals.</p>
-            </div>
-            <div class="about-item">
-                <img src="img/team.jpg" alt="Team">
+        <section class="hero">
+            <h1>About Us</h1>
+        </section>
+
+        <section class="mission-section">
+            <h2>Our Mission</h2>
+            <p>
+                At EcoHarmony, our mission is to inspire and empower people to embrace sustainable living.
+                By offering innovative and environmentally-friendly solutions, we aim to make a positive
+                impact on our planet for future generations.
+            </p>
+        </section>
+
+            <section class="contact-section">
+                <h2>Contact Us</h2>
+                <div class="contact-details">
+                    <p>Namn Namnsson</p>
+                    <p>Email: Namn.namnsson@example.com</p>
+                    <p>Phone: +076 123 45 67</p>
+                    <p>Namn Namnsson</p>
+                    <p>Email: Namn.namnsson@example.com</p>
+                    <p>Phone: +076 987 65 43</p>
             </div>
         </section>
     </main>
