Sista små justeringar
Jag har lagt till en bild/loga i footern + korrigerat error som hittades med W3.

--- a/html/grid.html
+++ b/html/grid.html
@@ -23,14 +23,14 @@
             <h1>About Us</h1>
         </section>
 
-        <section class="mission-section">
+        <aside class="mission-section">
             <h2>Our Mission</h2>
             <p>
                 At EcoHarmony, our mission is to inspire and empower people to embrace sustainable living.
                 By offering innovative and environmentally-friendly solutions, we aim to make a positive
                 impact on our planet for future generations.
             </p>
-        </section>
+        </aside>
 
             <section class="contact-section">
                 <h2>Contact Us</h2>
@@ -45,7 +45,10 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 EcoHarmony. All rights reserved.</p>
+        <div class="footer-content">
+            <p>&copy; 2024 EcoHarmony. All rights reserved.</p>
+            <img src="/img/recycling-symbol.png" alt="EcoHarmony Logo" class="recycling-symbol">
+        </div>
     </footer>
 </body>
 
