--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,10 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 EcoHarmony. All rights reserved.</p>
+        <div class="footer-content">
+            <p>&copy; 2024 EcoHarmony. All rights reserved.</p>
+            <img src="/img/recycling-symbol.png" alt="EcoHarmony Logo" class="recycling-symbol">
+        </div>
     </footer>
 </body>
 
